--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.0.0",
     "react-native": "0.51.0",
+    "react-native-android-location-services-dialog-box": "^2.4.3",
     "react-native-datepicker": "^1.6.0",
     "react-navigation": "^1.0.0-beta.22"
   },
